--- a/build.xml
+++ b/build.xml
@@ -258,49 +258,68 @@
     <property name="owasp-encoder" value="encoder-1.2.2.jar"/>
     <property name="owasp-encoder-jsp" value="encoder-jsp-1.2.2.jar"/>
 
+
+
+    <fileset id="hyrax-libs" dir="${lib.dir}">
+        <include name="${owasp-encoder}"/>
+        <include name="${owasp-encoder-jsp}"/>
+
+        <include name="${json.lib}"/>
+        <include name="${jdom.lib}"/>
+        <include name="${junit.lib}"/>
+
+        <include name="${commons-lang.lib}"/>
+        <include name="${commons-cli.lib}"/>
+        <include name="${commons-httpclient.lib}"/>
+        <include name="${commons-logging.lib}"/>
+        <include name="${commons-codec.lib}"/>
+
+        <include name="${http-components-httpclient.lib}"/>
+        <include name="${http-components-httpcore.lib}"/>
+
+        <include name="${commons-io.lib}"/>
+
+        <!-- include name="${xercesImpl.lib}"/>
+        <include name="${xercesXmlApis.lib}"/-->
+        <include name="${saxon-jdom.lib}"/>
+        <include name="${saxon-s9api.lib}"/>
+        <include name="${saxon.lib}"/>
+
+        <include name="${slf4j.lib}"/>
+        <include name="${logback-core.lib}"/>
+        <include name="${logback-classic.lib}"/>
+
+        <include name="${urlRewrite.lib}"/>
+    </fileset>
+
+    <fileset id="wcs-libs" dir="${wcs.lib.dir}">
+        <include name="${ogc-wcs.lib}"/>
+        <include name="${ogc-gml.lib}"/>
+        <include name="${ogc-swe.lib}"/>
+        <include name="${ogc-gmlcov.lib}"/>
+        <include name="${ogc-ows.lib}"/>
+        <include name="${ogc-jaxb.lib}"/>
+        <include name="${jaxb-core.lib}"/>
+        <include name="${jaxb-impl.lib}"/>
+    </fileset>
+
+
+
+
     <!-- Library (class)paths -->
     <path id="olfs.compile.classpath">
         <pathelement path="${build.classes}"/>
+        <!--
+            We have to have the catalina and servlet api's on the classpath at
+            compile time, but their not needed at deployment because they come
+            bundled with Tomcat
+        -->
         <fileset dir="${lib.dir}">
-            <include name="${servlet-api.lib}"/>
-            <include name="${owasp-encoder}"/>
-            <include name="${owasp-encoder-jsp}"/>
-            <include name="${json.lib}"/>
-            <include name="${jdom.lib}"/>
-            <include name="${junit.lib}"/>
-            <include name="${commons-cli.lib}"/>
-            <include name="${commons-httpclient.lib}"/>
-            <include name="${commons-logging.lib}"/>
-            <include name="${commons-codec.lib}"/>
-            <include name="${commons-lang.lib}"/>
-
-            <include name="${http-components-httpclient.lib}"/>
-            <include name="${http-components-httpcore.lib}"/>
-
-            <include name="${commons-io.lib}"/>
-
-            <include name="${saxon-jdom.lib}"/>
-            <include name="${saxon-s9api.lib}"/>
-            <include name="${saxon.lib}"/>
-
             <include name="${catalina.lib}"/>
-
-            <include name="${slf4j.lib}"/>
-            <include name="${logback-core.lib}"/>
-            <include name="${logback-classic.lib}"/>
+            <include name="${servlet-api.lib}"/>
         </fileset>
-        <fileset dir="${wcs.lib.dir}">
-            <include name="${ogc-wcs.lib}"/>
-            <include name="${ogc-gml.lib}"/>
-            <include name="${ogc-swe.lib}"/>
-            <include name="${ogc-gmlcov.lib}"/>
-            <include name="${ogc-ows.lib}"/>
-            <include name="${ogc-jaxb.lib}"/>
-            <include name="${jaxb-core.lib}"/>
-            <include name="${jaxb-impl.lib}"/>
-            <include name="${xlink.lib}"/>
-        </fileset>
-
+        <fileset refid="hyrax-libs" />
+        <fileset refid="wcs-libs" />
     </path>
 
 
@@ -363,9 +382,9 @@
         </junit>
     </target>
 
-	<!-- Alias for Travis which expects tests to be run by 'ant test' jhrg 3/14/19 -->
+    <!-- Alias for Travis which expects tests to be run by 'ant test' jhrg 3/14/19 -->
     <target name="test" depends="check"/>
-	
+
     <target name="PreProcessSourceCode"
             depends="clean,init"
             description="Moves selected source code from the development tree into
@@ -502,43 +521,7 @@
 
     </target>
 
-<!--
-    <target
-            name="javaDoc"
-            depends="clean,PreProcessSourceCode,IsJavaDocUpToDate"
-            description="Builds JavaDoc for the Serve4 software packages, if missing or out of date."
-            unless="JavaDocIsUpToDate"
-    >
 
-        <javadoc destdir="${build.docs}/javadoc"
-                 Author="true"
-                 Verbose="true"
-                 Version="true"
-                 failonerror="true"
-                 additionalparam="-Xdoclint:none"
-        >
-            <classpath refid="olfs.compile.classpath"/>
-
-            <packageset dir="${build.src}" defaultexcludes="yes"/>
-
-
-        </javadoc>
-
-    </target>
-
-    <target name="doc-dist"
-            depends="clean,javaDoc"
-            description="Builds documentation distribution"
-    >
-
-        <tar destfile="${build.dist}/${DOC_DIST}.tgz"
-             compression="gzip"
-        >
-            <zipfileset dir="${build.docs}" prefix="${DOC_DIST}"/>
-        </tar>
-
-    </target>
--->
 
 
     <target name="src-dist"
@@ -753,48 +736,8 @@
              webxml="${build.hyrax.resources}/WEB-INF/web.xml"
         >
 
-            <lib dir="${lib.dir}">
-                <include name="${owasp-encoder}"/>
-                <include name="${owasp-encoder-jsp}"/>
-
-                <include name="${json.lib}"/>
-                <include name="${jdom.lib}"/>
-                <include name="${junit.lib}"/>
-                <include name="${urlRewrite.lib}"/>
-
-                <include name="${commons-lang.lib}"/>
-                <include name="${commons-cli.lib}"/>
-                <include name="${commons-httpclient.lib}"/>
-                <include name="${commons-logging.lib}"/>
-                <include name="${commons-codec.lib}"/>
-
-                <include name="${http-components-httpclient.lib}"/>
-                <include name="${http-components-httpcore.lib}"/>
-
-                <include name="${commons-io.lib}"/>
-
-                <include name="${xercesImpl.lib}"/>
-                <include name="${xercesXmlApis.lib}"/>
-                <include name="${saxon-jdom.lib}"/>
-                <include name="${saxon-s9api.lib}"/>
-                <include name="${saxon.lib}"/>
-
-                <include name="${slf4j.lib}"/>
-                <include name="${logback-core.lib}"/>
-                <include name="${logback-classic.lib}"/>
-
-            </lib>
-            <lib dir="${wcs.lib.dir}">
-                <include name="${ogc-wcs.lib}"/>
-                <include name="${ogc-gml.lib}"/>
-                <include name="${ogc-swe.lib}"/>
-                <include name="${ogc-gmlcov.lib}"/>
-                <include name="${ogc-ows.lib}"/>
-                <include name="${ogc-jaxb.lib}"/>
-                <include name="${jaxb-core.lib}"/>
-                <include name="${jaxb-impl.lib}"/>
-                <include name="${xlink.lib}"/>
-            </lib>
+            <lib refid="hyrax-libs" />
+            <lib refid="wcs-libs" />
 
             <classes dir="${build.classes}"/>
 
@@ -832,37 +775,7 @@
              webxml="${build.robots.resources}/WEB-INF/web.xml"
         >
 
-            <lib dir="${lib.dir}">
-                <include name="${owasp-encoder}"/>
-                <include name="${owasp-encoder-jsp}"/>
-
-                <include name="${json.lib}"/>
-                <include name="${jdom.lib}"/>
-                <include name="${junit.lib}"/>
-                <include name="${urlRewrite.lib}"/>
-
-                <include name="${commons-lang.lib}"/>
-                <include name="${commons-cli.lib}"/>
-                <include name="${commons-httpclient.lib}"/>
-                <include name="${commons-logging.lib}"/>
-                <include name="${commons-codec.lib}"/>
-
-                <include name="${http-components-httpclient.lib}"/>
-                <include name="${http-components-httpcore.lib}"/>
-
-                <include name="${commons-io.lib}"/>
-
-                <include name="${xercesImpl.lib}"/>
-                <include name="${xercesXmlApis.lib}"/>
-                <include name="${saxon-jdom.lib}"/>
-                <include name="${saxon-s9api.lib}"/>
-                <include name="${saxon.lib}"/>
-
-                <include name="${slf4j.lib}"/>
-                <include name="${logback-core.lib}"/>
-                <include name="${logback-classic.lib}"/>
-
-            </lib>
+            <lib refid="hyrax-libs" />
 
             <classes dir="${build.classes}"/>
 
@@ -923,30 +836,29 @@
     </target>
 
     <!-- SonarCloud build stuff -->
-	  <!-- Define the SonarQube global properties (the most usual way is to pass these properties via the command line) -->
-	  <property name="sonar.host.url" value="https://sonarcloud.io" />
-	  <property name="sonar.login" value="ping... ping... ping..." />
+    <!-- Define the SonarQube global properties (the most usual way is to pass these properties via the command line) -->
+    <property name="sonar.host.url" value="https://sonarcloud.io" />
+    <property name="sonar.login" value="ping... ping... ping..." />
 
-	  <!-- Define the SonarQube project properties -->
-	  <property name="sonar.projectKey" value="opendap-olfs" />
-	  <property name="sonar.projectName" value="olfs" />
-	  <property name="sonar.projectVersion" value="${OLFS_VERSION}" />
-	  <property name="sonar.organization" value="opendap" />
-	  <property name="sonar.sources" value="src" />
-	  <property name="sonar.exclusions" value="src/opendap/experiments/**/*.java,src/opendap/metacat/**/*.java,src/opendap/aws/**/*.java,src/opendap/noaa_s3/**/*.java" />
-	  <property name="sonar.java.binaries" value="build" />
-	  <property name="sonar.java.libraries" value="lib/*.jar" />
+    <!-- Define the SonarQube project properties -->
+    <property name="sonar.projectKey" value="opendap-olfs" />
+    <property name="sonar.projectName" value="olfs" />
+    <property name="sonar.projectVersion" value="${OLFS_VERSION}" />
+    <property name="sonar.organization" value="opendap" />
+    <property name="sonar.sources" value="src" />
+    <property name="sonar.exclusions" value="src/opendap/experiments/**/*.java,src/opendap/metacat/**/*.java,src/opendap/aws/**/*.java,src/opendap/noaa_s3/**/*.java" />
+    <property name="sonar.java.binaries" value="build" />
+    <property name="sonar.java.libraries" value="lib/*.jar" />
 
-	  <!-- Define SonarQube Scanner for Ant Target -->
-	  <target name="sonar">
-	      <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
-	          <classpath path="resources/sonar/sonarqube-ant-task-2.6.0.1426.jar" />
-	      </taskdef>
-	      <!-- taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml" / -->
+    <!-- Define SonarQube Scanner for Ant Target -->
+    <target name="sonar">
+        <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
+            <classpath path="resources/sonar/sonarqube-ant-task-2.6.0.1426.jar" />
+        </taskdef>
+        <!-- taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml" / -->
         <!-- Execute SonarQube Scanner for Ant Analysis -->
         <sonar:sonar />
     </target>
-
 
 
 
@@ -972,48 +884,8 @@
              webxml="${ngapResources.dir}/web.xml"
         >
 
-            <lib dir="${lib.dir}">
-                <include name="${owasp-encoder}"/>
-                <include name="${owasp-encoder-jsp}"/>
-
-                <include name="${json.lib}"/>
-                <include name="${jdom.lib}"/>
-                <include name="${junit.lib}"/>
-                <include name="${urlRewrite.lib}"/>
-
-                <include name="${commons-lang.lib}"/>
-                <include name="${commons-cli.lib}"/>
-                <include name="${commons-httpclient.lib}"/>
-                <include name="${commons-logging.lib}"/>
-                <include name="${commons-codec.lib}"/>
-
-                <include name="${http-components-httpclient.lib}"/>
-                <include name="${http-components-httpcore.lib}"/>
-
-                <include name="${commons-io.lib}"/>
-
-                <include name="${xercesImpl.lib}"/>
-                <include name="${xercesXmlApis.lib}"/>
-                <include name="${saxon-jdom.lib}"/>
-                <include name="${saxon-s9api.lib}"/>
-                <include name="${saxon.lib}"/>
-
-                <include name="${slf4j.lib}"/>
-                <include name="${logback-core.lib}"/>
-                <include name="${logback-classic.lib}"/>
-
-            </lib>
-            <lib dir="${wcs.lib.dir}">
-                <include name="${ogc-wcs.lib}"/>
-                <include name="${ogc-gml.lib}"/>
-                <include name="${ogc-swe.lib}"/>
-                <include name="${ogc-gmlcov.lib}"/>
-                <include name="${ogc-ows.lib}"/>
-                <include name="${ogc-jaxb.lib}"/>
-                <include name="${jaxb-core.lib}"/>
-                <include name="${jaxb-impl.lib}"/>
-                <include name="${xlink.lib}"/>
-            </lib>
+            <lib  refid="hyrax-libs"/>
+            <lib  refid="wcs-libs"/>
 
             <classes dir="${build.classes}"/>
 
